--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -43,13 +43,13 @@ h3, h4, h5{
 }
 
 
-.singlePage {
-  margin: 4em 25vw;
+// .singlePage {
+//   margin: 4em 25vw;
 
-  @media all and (max-width: 1000px) {
-    margin: 25px 5vw;
-  }
-}
+//   @media all and (max-width: 1000px) {
+//     margin: 25px 5vw;
+//   }
+// }
 
 
 article {
