--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,6 +1,6 @@
 // Add your own CSS here!
 :root {
-  --light: #F7FFF7;
+  --light: #f6f6f6;
   --dark: #262626;
   --secondary: #5B8E7D ;
   --tertiary: #85bdaa;
@@ -41,15 +41,40 @@ h2{
 h3, h4, h5{
   padding-top: 8px;
 }
+article-head > h1 {
+  font-size: 2em;
+}
 
+// ==== 页面宽度 ====
 
-// .singlePage {
-//   margin: 4em 25vw;
+// 导航栏
+.singlePage {
+  padding: 4em 5vw;
 
-//   @media all and (max-width: 1000px) {
-//     margin: 25px 5vw;
-//   }
-// }
+  @media all and (max-width: 1200px) {
+    padding: 25px 5vw;
+  }
+}
+
+// ==== 文章头部 ====
+article-head{
+  padding: 4em 15vw;
+  text-align: center;
+
+  @media all and (max-width: 1200px) {
+    padding: 25px 2vw;
+  }
+}
+
+// ==== 文章本体 ====
+article{
+  padding: 4em 24vw;
+  padding-top: 0;
+
+  @media all and (max-width: 1200px) {
+    padding: 3px 5vw;
+  }
+}
 
 
 article {
@@ -121,3 +146,27 @@ img {
 //   margin-left: auto;
 //   margin-right: auto;
 // }
+
+
+
+// ==== 自定义功能 ====
+
+#myBtn {
+  // display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: var(--secondary); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 7px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: var(--primary); /* Add a dark-grey background on hover */
+}
