--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -29,6 +29,7 @@ header>h1{
   background: linear-gradient(to right, var(--headline) , var(--secondary));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin: 0;
 }
 
 ::selection {
@@ -43,22 +44,24 @@ h3, h4, h5{
 }
 article-head > h1 {
   font-size: 2em;
+
+}
+
+h1>a{
+  font-size: 0.7em;
 }
 
 // ==== 页面宽度 ====
 
 // 导航栏
 .singlePage {
-  padding: 4em 5vw;
+  padding: 2em 2vw;
 
-  @media all and (max-width: 1200px) {
-    padding: 25px 5vw;
-  }
 }
 
 // ==== 文章头部 ====
 article-head{
-  padding: 4em 15vw;
+  padding: 4em 0vw;
   text-align: center;
 
   @media all and (max-width: 1200px) {
@@ -162,11 +165,11 @@ img {
   background-color: var(--secondary); /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 7px; /* Some padding */
+  padding: 7px 11px 7px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
 }
 
 #myBtn:hover {
-  background-color: var(--primary); /* Add a dark-grey background on hover */
+  background-color: var(--tertiary); /* Add a dark-grey background on hover */
 }
