--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,8 @@
   {{ partial "head.html" . }}
   
   <style >
-    article a.internal-link{margin:10px; }
+    article a.internal-link{margin:10px;}
+    article a{ font-size: 1em;}
   </style>
 
 <!-- {{ with $.Resources.GetMatch "**.css*" }}
